Created new fixture and test_auth.py for testing authentication token

--- a/automation_framework/config/config.yaml
+++ b/automation_framework/config/config.yaml
@@ -4,3 +4,4 @@ base_url: "https://restful-booker.herokuapp.com"
 username: "admin"
 password: "password123"
 default_timeout: 10
+env: "stage"  # Options: "dev", "stage", "prod"
