Removed logger and report duplicacy folder and fixed the path

--- a/automation_framework/pytest.ini
+++ b/automation_framework/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-addopts = -v --html=reports/report.html --self-contained-html
+addopts = -v --self-contained-html
 markers =
     negative_tests: marks tests as negative test cases
+testpaths = tests
